noinst_LIBRARIES = libsub.a

libsub_a_SOURCES = termio.c readdef.c nesig.c getmsg.c alias.c xstring.c freemsg.c cdate.c listsig.c sem.c getkey.c getctl.c muserinf.c memdump.c readdef2.c datetime.c fm2re.c readdef3.c affirm.c pguser.c protos.c m_bogus.c

AM_CFLAGS=-Wno-implicit-int -Wno-implicit-function-declaration -Wno-dangling-else -DANSI
